--- a/public/progress.html
+++ b/public/progress.html
@@ -5,17 +5,21 @@
     <title>Downloading Readit Update</title>
   </head>
   <body>
-    <progress style="width:100%;" value="0" max="100"></progress>
+    <progress id="progress" style="width:100%;" value="0" max="100"></progress>
   </body>
 
   <script>
-    let progress_val = document.getElementsByTagName('progress')
+    
     // jQuery
     // $ = require('jquery')
 
     // Require IPC
     const {ipcRenderer} = require('electron')
+    let tele = ipcRenderer.sendSync('tele')
+console.log('tele',tele );
 
+
+    let progress_val = document.getElementById('progress')
     // Request progress every second
     setInterval(() => {
 
